--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ authors = ["moreirak14 <kaiquemoreiracloud@gmail.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.10"
+dynaconf = "^3.1.9"
 
 [tool.poetry.dev-dependencies]
 
