--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,11 @@ python = "^3.10"
 dynaconf = "^3.1.9"
 
 [tool.poetry.dev-dependencies]
+black = "^22.6.0"
+isort = "^5.10.1"
+pylint = "^2.15.0"
+flake8 = "^5.0.4"
+pre-commit = "^2.20.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
