--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ authors = ["moreirak14 <kaiquemoreiracloud@gmail.com>"]
 [tool.poetry.dependencies]
 python = "^3.10"
 dynaconf = "^3.1.9"
+Django = "^4.1"
 
 [tool.poetry.dev-dependencies]
 black = "^22.6.0"
