--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ python = "^3.10"
 dynaconf = "^3.1.9"
 Django = "^4.1"
 djangorestframework = "^3.13.1"
+Pillow = "^9.2.0"
 
 [tool.poetry.dev-dependencies]
 black = "^22.6.0"
